# remote-mndset

./: CMakeLists.txt  README.md  data_sender.cpp  data_sender.h  main.cpp  main_window.cpp  main_window.h  math_helper.cpp  math_helper.h  movement.cpp  movement.h  settings.cpp  settings.h  structs.h
